# jmp_mcp

./: .gitignore  README.md  pyproject.toml
examples/: table_preview.json  table_schema.json  tables_list.json
src/jmp_readonly_mcp/: __init__.py  errors.py  reader.py  runner.py  schemas.py  security.py  server.py
templates/: runner_readonly.jsl
tests/: test_csv_reading.py  test_jmp_runner_mock.py  test_schema_validation.py
